add adaptivity for hero

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
           <li><a class="link-menu not-active-page" href="">Contacts</a></li>
         </ul>
       </nav>
+
+      <ul class="tablet-menu-links">
+        <li><a class="link-menu active-page" href="">Studio</a></li>
+        <li><a class="link-menu not-active-page" href="">Portfolio</a></li>
+        <li><a class="link-menu not-active-page" href="">Contacts</a></li>
+      </ul>
+
+      <button class="menu-btn-mobile" type="button">
+        <svg class="menu-mobile-icon">
+          <use href="./images/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
+
       <address class="address-items">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -52,13 +65,16 @@
         <div class="hero-background">
           <div class="hero-background-overlay"></div>
         </div>
-        <h1 class="title-primary">Effective Solutions <br />for Your Business</h1>
+        <h1 class="title-primary">
+          Effective Solutions
+          <span class="break">for Your Business</span>
+        </h1>
         <button class="button-primary" type="button">Order Service</button>
       </section>
       <!-- #endregion = Hero -->
 
       <!-- #region = Benefits -->
-      <section class="container">
+      <!-- <section class="container">
         <h2 class="visually-hidden">Benefits</h2>
         <ul class="benefits-list">
           <li class="benefit-item">
@@ -98,11 +114,11 @@
             </p>
           </li>
         </ul>
-      </section>
+      </section> -->
       <!-- #endregion = Benefits -->
 
       <!-- #region = Our Team -->
-      <section class="our-team-container">
+      <!-- <section class="our-team-container">
         <div class="container">
           <h2 class="title-secondary">Our Team</h2>
           <ul class="team-cards-all">
@@ -288,11 +304,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- #endregion = Our Team -->
 
       <!-- #region = Our Portfolio -->
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="title-secondary">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -418,13 +434,13 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- #endregion = Our Portfolio -->
     </main>
 
     <!-- #region = Footer -->
 
-    <footer class="page-footer">
+    <!-- <footer class="page-footer">
       <ul class="container footer-section">
         <li class="footer-mini-section">
           <a class="link-nav" href="./index.html"
@@ -469,11 +485,11 @@
         </li>
         <li class="footer-mini-section"></li>
       </ul>
-    </footer>
+    </footer> -->
     <!-- #endregion = Footer -->
 
     <!-- #region - Modal -->
-    <div class="modal-overlay is-open">
+    <!-- <div class="modal-overlay is-open">
       <div class="modal-window">
         <div class="modal-top-line">
           <button class="modal-button-close" type="button">
@@ -577,7 +593,7 @@
           </form>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- #endregion - Modal -->
   </body>
 </html>
